--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.1",
+    "react-model": "^4.3.1",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
