--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
 PORT = 5000
 ACCESS_TOKEN_SECRET = my_access_token_secret_key
-MONGO_URI = "mongodb+srv://yogeshvenugopal:yogesh9092161170@cluster0.gsyvh.mongodb.net/notes?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI = "mongodb+srv://yogeshvenugopal:Yogesh9092161170@cluster0.gsyvh.mongodb.net/notes?retryWrites=true&w=majority&appName=Cluster0"
